fix(audit): Part A foundations + Part B safety systems (P2 code-audit)
Part A — contracts + models:
- RawTableColumns contract hardening, TableContractValidator exact PK,
  SignalCandidates BUCKET_KEY/COUNT, MarketTick + RawValidationFunction
  VALID_TRADE/VALID_NON_TRADE, dedup version/fingerprint guards
- Delete dead duplicates: common/model Candle15s, RankingResult,
  SignalCandidate, TradeDecision (zero imports; live path is
  compute/signaljob record + builders)
- N7RangeBreakoutStrategy live guard: side BUY/SELL + price/qty checks,
  drop+count rejected_invalid, never throw

Part B — safety systems:
- 2.1 observation (006/007/008/009/113): first-seen <0->UNKNOWN,
  volatile gauge mirror, malformed counted skips, requireLong/Text,
  blank db/table reject
- 2.2 job (114/115/010/011/117): arrival-check freshness gate (no timers),
  24h state TTL, RuntimeException backstop, forward-only transitions
- 2.3 bridge+env (012/013/014/015/116): arity 21, null+RowKind gates,
  textOrNull/isNullAt, split(-1) + parse helpers
- 2.4 deploy guards (002/003/086/087/219/220): savepointPath in POST body,
  prod tokens FATAL, skip-if-RUNNING idempotency, failed-flag exit,
  dead LOG/filter removal + comment/import cleanup

Tests: babysitter + safety-apply green, bash -n clean.

Co-authored-by: CommandCodeBot <noreply@commandcode.ai>