@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import com.trading.common.schema.RawTableSchema;
 import org.apache.flink.api.common.eventtime.Watermark;
@@ -32,7 +31,8 @@ class CandleWatermarkStrategyTest {
         // The Fluss v3 source row gained event_day at index 0. Keep the
         // compute-side indexes tied to the shared schema so a future DDL
         // migration cannot silently feed symbol/string data to getLong().
-        assertEquals(RawTableSchema.COLUMNS, Arrays.asList(RawTableColumns.NAMES));
+        assertEquals(RawTableSchema.COLUMNS, RawTableColumns.COLUMN_NAMES);
+        assertEquals(RawTableSchema.COLUMNS, List.of(RawTableColumns.namesCopy()));
         assertEquals(RawTableSchema.FIELD_COUNT, RawTableColumns.FIELD_COUNT);
         GenericRowData v3 = new GenericRowData(RawTableColumns.FIELD_COUNT);
         v3.setField(RawTableColumns.EVENT_DAY, StringData.fromString("20260901"));
